--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,15 +4,15 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.e-comerce-api-url: '%env(E_COMERCE_API_URL)%'
+    app.e-comerce-api-key: '%env(E_COMERCE_API_KEY)%'
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
+    _defaults:
+        autowire: true
+        autoconfigure: true
+
     App\:
         resource: '../src/'
         exclude:
@@ -20,5 +20,17 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\Security\Hasher\CustomHasher:
+        arguments:
+            $memory_cost: 2048
+            $time_cost: 4
+            $threads: 3
+
+security:
+
+    firewalls:
+        main:
+            stateless: true
+            custom_authenticators:
+                - App\Security\Guard\AuthenticationGuard
+                - App\Security\Guard\AuthorizationGuard
