--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 
 ###> symfony/framework-bundle ###
+### create the env file in the Dockerfile
+keys/*
+.env
 /.env.local
 /.env.local.php
 /.env.*.local
